Fix CSS formatting and remove excess whitespace

--- a/style.css
+++ b/style.css
@@ -33,14 +33,12 @@ nav {
     background: #fdf9ef;
     padding: 0.5rem;
     text-align: center;
-    display: flex;
 }
 nav a {
     color: #034c30;
     margin: 0 10px;
     text-decoration: none;
     text-align: center;
-    display: flex;
 }
 main {
     padding: 2rem;
@@ -77,6 +75,7 @@ a:active {
 a:visited {
   color: purple;
 }
+
 
 
 
